# irenc

./: .gitignore  README.md  _config-all-sys.sh  _make-all-sys.sh  configure.ac  mrproper.sh  notes.txt
literature/: input.txt  mode2-output3-1.txt  mode2-output3-2.txt  mode2-output3-3.txt  mode2-output3-4.txt  mode2-output3.txt  output.txt
src/: Makefile.am  main.c
src/dspc-hello/: DspcHello.cpp  DspcHello.h  Makefile.am  dspc-hello.c  main.c  main.cpp
src/dspc-hello/hal/: Makefile.am
src/dspc-hello/hal/generic/: Makefile.am
src/dspc-hello/hal/windows/: Makefile.am
src/dspc-hello/include/tclap/: Arg.h  ValueArg.h
src/hal/: Makefile.am
src/hal/generic/: Makefile.am
src/irenc/: IrEnc.cpp  IrEnc.h  Makefile.am  main.cpp
src/irenc/include/: Makefile.am
src/irenc/include/pigpio/: Makefile.am
